src/assets/scss/components/modal.scss
.modal {
    background: radial-gradient(50% 50% at 50% 50%, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0.49) 100%);
}

.modal-header {
    border-bottom: none;

    z-index: 3;
}

.modal-opened {
    display: block;
    animation: modalBackShow 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards;
}

.modal-closed {
    display: block;

    pointer-events: none;
    animation: modalBackClose 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards;
}

.modal-opened .modal-content {
    animation: modalOpen 0.3s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
}

.modal-closed .modal-content {
    animation: modalClose 0.3s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
}

@keyframes modalOpen {
    from { 
        transform: scale(120%);
        opacity: 0;
    }
    to { 
        transform: scale(100%);
        opacity: 1;
    }
}

@keyframes modalClose {
    from { 
        transform: scale(100%);
        opacity: 1;
    }
    to { 
        transform: scale(80%);
        opacity: 0;
    }
}

@keyframes modalBackShow {
    from {
        opacity: 0;
    }
}

@keyframes modalBackClose {
    0% { 
        opacity: 1;
    }
    100% { 
        opacity: 0;
    }
}

